[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]




[[bin]]
name = "day_01"
path = "day/01/main.rs"

[[bin]]
name = "day_02"
path = "day/02/main.rs"

[[bin]]
name = "day_03"
path = "day/03/main.rs"

[[bin]]
name = "day_04"
path = "day/04/main.rs"
